--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,50 @@
+appdirs==1.4.4
 asgiref==3.3.4
+astroid==2.4.2
+attrs==20.3.0
 blessings==1.7
-bpython==0.21
-certifi==2020.12.5
-chardet==4.0.0
-curtsies==0.3.5
-cwcwidth==0.1.4
-Django==3.2.3
-django-formtools==2.3
-greenlet==1.1.0
+bpython==0.20.1
+certifi==2020.11.8
+cffi==1.14.5
+chardet==3.0.4
+click==8.0.1
+cryptography==3.4.6
+curtsies==0.3.4
+distlib==0.3.1
+Django==3.2.4
+filelock==3.0.12
+Flask==2.0.0
+greenlet==0.4.17
 idna==2.10
-phonenumbers==8.12.24
-psycopg2-binary==2.8.6
-Pygments==2.9.0
+isort==5.7.0
+itsdangerous==2.0.1
+jellyfish==0.8.2
+Jinja2==3.0.1
+lazy-object-proxy==1.4.3
+lib50==2.0.9
+MarkupSafe==2.0.1
+mccabe==0.6.1
+pbr==5.5.1
+pexpect==4.8.0
+pipenv==2020.11.15
+ptyprocess==0.7.0
+pycparser==2.20
+Pygments==2.7.2
+pylint==2.6.0
 pytz==2021.1
-pyxdg==0.27
-requests==2.25.1
-six==1.16.0
+PyYAML==5.4.1
+requests==2.25.0
+selenium==3.141.0
+six==1.15.0
 sqlparse==0.4.1
-urllib3==1.26.5
+stevedore==3.3.0
+submit50==3.0.3
+termcolor==1.1.0
+toml==0.10.2
+urllib3==1.26.2
+virtualenv==20.2.1
+virtualenv-clone==0.5.4
+virtualenvwrapper==4.8.4
+wcwidth==0.2.5
+Werkzeug==2.0.1
+wrapt==1.12.1
